# advent-of-code

./: README.md
2020/day-1/: Cargo.toml
2020/day-10/: day-10.jl
2020/day-11/: day-11.jl
2020/day-13/: day-13.jl
2020/day-14/: day-14.jl
2020/day-15/: day-15.jl
2020/day-16/: day-16.jl
2020/day-2/: day-2.jl
2020/day-21/: day21.rs
2020/day-22/: day22.rs
2020/day-6/: Cargo.toml  day-6.jl
2020/day-8/: day-8.jl
2021/day-1/: main.hs
2021/day-10/: main.hs
2021/day-11/: main.py
2021/day-12/: main.hs
2021/day-13/: main.hs
2021/day-14/: main.hs
2021/day-15/: main.jl
2021/day-16/: main.py
2021/day-17/: main.py
2021/day-18/: main.jl
2021/day-19/: main.jl
2021/day-2/: main.jl
2021/day-20/: main.jl
2021/day-21/: main.jl
2021/day-22/: main.jl
2021/day-24/: main.jl
2021/day-25/: main.jl
2021/day-3/: main.hs
2021/day-4/: main.hs
2021/day-5/: main.hs
2021/day-6/: main.hs
2021/day-7/: main.hs
2021/day-8/: main.hs
2021/day-9/: main.hs
2022/day-1/: day1.rs
2022/day-10/: day10.py  day10.rs
2022/day-11/: day11.py
2022/day-12/: day12.py  day12.rs
2022/day-13/: day13.py  day13.rs
2022/day-14/: day14.py  day14.rs
2022/day-15/: day15.py  day15.rs
2022/day-16/: day16.py
2022/day-17/: day17.py
2022/day-18/: day18.rs
2022/day-19/: day19.rs
2022/day-2/: day2.rs
2022/day-20/: day20.jl
2022/day-21/: day21.py  (+1 more)
2024/: Cargo.toml
2024/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  input.rs
day-12/: day-12.jl
day-3/: day-3.jl
day-4/: day-4.py
day-5/: day-5.jl
day-7/: day-7.jl
day-9/: day-9.jl
(+39 files in other folders)
